Fix a spacing issue on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -75,6 +75,14 @@ body {
 	}
 }
 
+.homepage .main {
+	margin-top: $nav-header-height;
+
+	@media (min-width: $mobile-break) {
+		margin-top: 0;
+	}
+}
+
 header {
 	$emblem-size: 35px;
 	$emblem-vertical-padding: ($nav-header-height - $emblem-size) / 2;
